<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>mouseRace</groupId>
  <artifactId>mouseRace</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <dependencies>
       
       	<dependency>
		    <groupId>com.google.api</groupId>
		    <artifactId>api-common</artifactId>
		    <version>2.32.0</version> 
		</dependency>
		
		
        <dependency>
            <groupId>com.google.firebase</groupId>
            <artifactId>firebase-admin</artifactId>
            <version>9.3.0</version>
        </dependency>
        
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.32.1</version>
            <exclusions>
            	<exclusion>
            		<groupId>com.google.oauth-client</groupId>
            		<artifactId>google-oauth-client</artifactId>
            	</exclusion>
            </exclusions>
        </dependency>
        
        <dependency>
	        <groupId>com.google.http-client</groupId>
	        <artifactId>google-http-client</artifactId>
	        <version>1.38.0</version>
	    </dependency>
	    
	    <dependency>
	        <groupId>com.google.code.gson</groupId>
	        <artifactId>gson</artifactId>
	        <version>2.8.6</version>
	    </dependency>
        
    </dependencies>
  
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>17</release>
              <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>